# Pet-project

./: .gitignore  .gitignore.txt  CMakeLists.txt  README.md  Readme.md  demo_linux_v0.1.0
datas/: aerodrom.ltx  fhConfigs.ltx
datas/animations/: ExoSoldier_Arm.arm  Hands_F.001.anim  Hands_F2.anim  Hands_Install_Dynamite.anim  Hands_Knife_Hit.anim  Hands_LeftArm.anim  Hands_Peace.anim  Hands_Pistol_Idle.anim  Hands_Pistol_Overview.anim  Hands_Pistol_Reload.anim  Hands_Rifle_Idle.anim  Hands_Rifle_Reload.anim  Hands_RightArm.anim  Ork_Idle.anim  Ork_die.anim  Player_Hands_Skeleton.arm  man_button_push.anim  man_punch.anim
datas/datas/animations/: Hands_Change_Item.anim  Hands_F.anim  Hands_Hand.anim  Hands_Idle.anim  Hands_Knife_Idle.anim  Hands_Knife_Open_Door.anim  Hands_Pistol_Aim.anim  Hands_Rifle_Aim.anim  Hands_Rifle_Overview.anim  Hands_Shotgun_Aim.anim  Hands_Shotgun_Idle.anim  Ork_01_Skeleton.arm  Ork_attack.anim  Ork_walk.anim  Player_Hands_Skeleton_old.arm  Player_Interact_Left.anim  T-pose.anim  mag_reload.anim  (+3 more)
datas/materials/: Ch15_body.ltx  M_ACR_01.ltx  M_ACR_Mag_01.ltx  M_Concrete_007_0.5k_x1.ltx  M_Concrete_007_0.5k_x2.ltx  M_Concrete_007_0.5k_x4.ltx  M_Dark_Wood_0_5k_x1.ltx  M_Default_0_5k.ltx  M_Dynamite_01.ltx  M_Exo_Soldier_01_0_5k.ltx  M_Floor_Tiles_0_5k_x4.ltx  M_Ground_01_0_5k_x1.ltx  M_Mark_01.ltx  M_Mark_02.ltx  M_Mark_03.ltx  M_Mark_04.ltx  M_Metal_Rust_001_0_5k_x1.ltx  M_Metal_Rust_001_0_5k_x2.ltx  M_Metal_Rust_001_0_5k_x4.ltx  M_Metal_Rust_002_0_5k_x1.ltx  M_Metal_Rust_002_0_5k_x2.ltx  M_Metal_Rust_002_0_5k_x4.ltx  M_Ork_01_0_5k.ltx  M_Ork_01_1k.ltx  M_PlayerHands_01.ltx  M_SM_Pistol_01.ltx  M_Skybox_01.ltx  M_WoodPlanks_0_5k.ltx
datas/meshes/: CB_Box_01.collision  CB_Box_01_Box.collision  CB_Box_01_Box.model  CB_Box_01_Lid.collision  CB_Box_01_Lid.model  CB_Cabin_01.model  CB_Door_01.collision  CB_Door_01.model  CB_Door_02.model  CB_Doorway_01.collision  CB_Doorway_01.model  CB_Elevator_01.model  CB_Elevator_01_Cabin.collision  CB_Elevator_01_Cabin.ltx  CB_Elevator_01_Cabin.model  CB_Elevator_01_Cabin_Door.collision  CB_Elevator_01_Cabin_Door.model  CB_Elevator_Lamp.collision  CB_Elevator_Lamp.model  CB_Orc_01.collision  CB_Orc_01.model  CB_PLAYER_01.001.collision  CB_PLAYER_01.model  CB_Pistol_01.collision  CB_Pistol_01.model  CB_Player_02.collision  CB_Player_02.model  CB_Player_Hands_02.collision  CB_Player_Hands_02_Visual.model  CB_Scene_01.001.collision  CB_Scene_01.001.model  CB_Scene_01.collision  CB_Scene_01.model  CB_Scene_02.model  Cube.007.model  Cube.model  Plane.model  SKM_PlayerMesh.model  SM_ACR.model  SM_ACR_Mag.model  (+54 more)
datas/shaders/: forward.fs  forward.vs
datas/textures/: Cabin_Debug.png~
include/: biCycle_13.h  resourceManager.h  stack_adv.h
libs/msvc/: glew32.exp  glfw3.lib  glfw3dll.exp  libglew32.lib  sfml-audio-d.exp  sfml-audio-d.lib  sfml-audio-s.lib  sfml-audio.exp  sfml-audio.lib  sfml-graphics-s.lib  sfml-graphics.exp  sfml-graphics.lib  sfml-main-d.lib  sfml-main.lib  sfml-network-s.lib  sfml-network.exp  sfml-network.lib  sfml-system-d.exp  sfml-system-d.lib  sfml-system-s.lib  sfml-system.exp  sfml-system.lib  sfml-window-s.lib  sfml-window.exp  sfml-window.lib
src/: AI_Controller.cpp  AI_Controller.h  AnimationController.cpp  AnimationController.h  Box_01.cpp  Box_01.h  Camera.cpp  Camera.h  Collision.cpp  Collision.h  CollisionCalculator.cpp  CollisionCalculator.h  CollisionDescriptor.cpp  CollisionDescriptor.h  CollisionShell.cpp  CollisionShell.h  Core.cpp  Core.h  Debugger.cpp  Debugger.h  Door_01.cpp  Door_01.h  DynamicLight.cpp  DynamicLight.h  Dynamic_Ball.cpp  Dynamic_Ball.h  EXO_Soldier.cpp  EXO_Soldier.h  ElectricBox.cpp  ElectricBox.h  Elevator.cpp  Elevator.h  Entity.cpp  Entity.h  Gate_01.cpp  Gate_01.h  Laboratory.cpp  Laboratory.h  Level.cpp  Level.h  (+40 more)
